# music-profanity-filter

./: .gitignore  README.md  pyproject.toml
src/music_profanity_filter/: __init__.py  cli.py  detector.py  editor.py  edl.py  lyrics.py  metadata.py  pipeline.py  separator.py  transcriber.py
src/music_profanity_filter/data/: profanity.txt
